--- a/ecommerce-api/src/main/resources/application.properties
+++ b/ecommerce-api/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=ecommerce
 
-
 spring.r2dbc.url=r2dbc:postgresql://localhost:5432/ecommerce
 spring.r2dbc.username=admin
 spring.r2dbc.password=admin123
 
+spring.r2dbc.pool.initial-size=5
+spring.r2dbc.pool.max-size=10
+spring.r2dbc.pool.max-idle-time=30m
+
 spring.data.mongodb.uri=mongodb://admin:admin123@localhost:27017/ecommerce?authSource=admin
+spring.data.mongodb.connection-pool-size=10
 
 
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/api-docs
+logging.level.org.springframework.data.r2dbc=DEBUG
+logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
