--- a/compose.yml
+++ b/compose.yml
@@ -25,6 +25,22 @@ services:
       - mongo_data:/data/db
     restart: unless-stopped
 
+  api:
+    build:
+      context: ./ecommerce-api
+      dockerfile: Dockerfile
+    ports:
+      - "8085:8080"
+    depends_on:
+      - postgres
+      - mongodb
+    restart: unless-stopped
+    environment:
+      - SPRING_R2DBC_URL=r2dbc:postgresql://postgres:5432/ecommerce
+      - SPRING_R2DBC_USERNAME=admin
+      - SPRING_R2DBC_PASSWORD=admin123
+      - SPRING_DATA_MONGODB_URI=mongodb://admin:admin123@mongodb:27017/ecommerce?authSource=admin
+
 volumes:
   postgres_data:
   mongo_data:
